# flatpak-python-template

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
.flatpak-builder/cache/refs/heads/x86_64-io.github.riftr.flatpak-python-template.yml/: build-my_sample_app  build-python3-colorama  build-python3-pillow  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-io.github.riftr.flatpak-python-template.yml
.flatpak-builder/git/https_github.com_Riftr_flatpak-python-template.git/: FETCH_HEAD  config  shallow
.flatpak-builder/git/https_github.com_Riftr_flatpak-python-template.git/objects/pack/: pack-fa18f839b2b05dcea7edffdea56a85fe9865cb98.idx  pack-fa18f839b2b05dcea7edffdea56a85fe9865cb98.pack  pack-fa18f839b2b05dcea7edffdea56a85fe9865cb98.rev
flatpak/: flatpak-build.sh  flatpak-getreq.sh  flatpak-pip-generator.py  io.github.riftr.flatpak-python-template.yml
my_sample_app/: __init__.py
sampleapp/: __init__.py
src/: __init__.py
src/resources/: example.txt
tests/: test.py
